--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -11,7 +11,6 @@
     opacity: 0.4;
 }
   
-
 .text-overlay{
     position: absolute;
     top: 50%;
@@ -20,20 +19,12 @@
 }
 
 
-
 /* Hero content */
-.profile-img{
-    width: 9em;
-    height: 9em;
-    max-width: 100%;
-    height: 100%;
-}
-
 .hero-title{
     font-family: "Cinzel Decorative", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 6.5em !important;
+    font-size: 3em !important;
 }
 
 
@@ -41,25 +32,12 @@
     font-family: "Livvic", sans-serif;
     font-weight: 200;
     font-style: normal;
-    font-size: 1.7em;
+    font-size: 1em;
 }
-
-
-@media screen and (max-width: 768px){
-    .hero-title{
-        font-size: 3em !important;
-    }
-    
-    .hero-subtitle{
-        font-size: 1em;
-    }
-    
-}
-
 
 .icons{
     margin-right: 0.3em;
-    font-size: 1.8em;
+    font-size: 1.7em;
     color: white;
 }
 
@@ -67,4 +45,17 @@
 a{
     text-decoration: none;
     color: inherit;
+}
+
+
+/* Media Queries */
+@media screen and (min-width: 768px){
+    .hero-title{
+        font-size: 6.5em !important;
+    }
+    
+    .hero-subtitle{
+        font-size: 1.7em;
+    }
+    
 }
