--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -49,13 +49,36 @@ a{
 
 
 /* Media Queries */
-@media screen and (min-width: 768px){
+
+/* Tablets */
+@media screen and (min-width: 768px) and (max-width: 1025px){
+    .hero-title{
+        font-size: 4.5em !important;
+    }
+    
+    .hero-subtitle{
+        font-size: 1.3em;
+    }
+
+    .icons{
+        font-size: 2em;
+        margin-right: 0.5em;
+    }
+    
+}
+
+/* Larger Screens */
+@media screen and (min-width: 1025px){
     .hero-title{
         font-size: 6.5em !important;
     }
     
     .hero-subtitle{
         font-size: 1.7em;
+    }
+
+    .icons{
+        font-size: 2.2em;
     }
     
 }
