--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -35,6 +35,11 @@
     font-size: 1em;
 }
 
+.hero-title, .hero-subtitle{
+    user-select: none;
+    cursor: default;
+}
+
 .icons{
     margin-right: 0.3em;
     font-size: 1.7em;
@@ -51,15 +56,13 @@ a{
 /* Media Queries */
 
 /* Tablets */
-@media screen and (min-width: 768px) and (max-width: 1025px){
+@media screen and (min-width: 768px) and (max-width: 1024px){
     .hero-title{
         font-size: 4.5em !important;
     }
-    
     .hero-subtitle{
         font-size: 1.3em;
     }
-
     .icons{
         font-size: 2em;
         margin-right: 0.5em;
@@ -68,17 +71,26 @@ a{
 }
 
 /* Larger Screens */
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1024px){
     .hero-title{
-        font-size: 6.5em !important;
+        font-size: 6em !important;
     }
-    
     .hero-subtitle{
         font-size: 1.7em;
     }
-
     .icons{
         font-size: 2.2em;
+    }
+    
+}
+
+/* Extra large screens */
+@media screen and (min-width: 1500px){
+    .hero-subtitle{
+        font-size: 2em;
+    }
+    .icons{
+        font-size: 2.5em;
     }
     
 }
