--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,27 @@
-
-.sections-container{
-    background-color: black;
+main{
     position: relative;
+}
+
+.section-container{
+    position: absolute;
+    top: 2%;
+    left: 50%;
+    transform: translate(-50%, -0%);
+    color: white;
+    font-family: "Livvic", sans-serif;
+    
+}
+
+section{
+    margin-bottom: 3em;
+    margin-top: 3em;
+}
+
+
+
+/* Media Queries */
+@media screen and (min-width: 450px){
+    .section-container{
+        top: 10%;
+    }
 }
