--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -24,7 +24,7 @@
     font-family: "Cinzel Decorative", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 3em !important;
+    font-size: 2.5em !important;
 }
 
 
@@ -32,7 +32,7 @@
     font-family: "Livvic", sans-serif;
     font-weight: 200;
     font-style: normal;
-    font-size: 1em;
+    font-size: 0.8em;
 }
 
 .hero-title, .hero-subtitle{
@@ -41,8 +41,7 @@
 }
 
 .icons{
-    margin-right: 0.3em;
-    font-size: 1.7em;
+    font-size: 1.5em;
     color: white;
 }
 
@@ -55,17 +54,29 @@ a{
 
 /* Media Queries */
 
+/* Larger Phones */
+@media screen and (min-width: 375px) and (max-width: 768px){
+    .hero-title{
+        font-size: 3em !important;
+    }
+    .hero-subtitle{
+        font-size: 1em;
+    }
+    .icons{
+        font-size: 1.7em;
+    } 
+}
+
 /* Tablets */
 @media screen and (min-width: 768px) and (max-width: 1024px){
     .hero-title{
-        font-size: 4.5em !important;
+        font-size: 3.5em !important;
     }
     .hero-subtitle{
         font-size: 1.3em;
     }
     .icons{
         font-size: 2em;
-        margin-right: 0.5em;
     }
     
 }
@@ -73,7 +84,7 @@ a{
 /* Larger Screens */
 @media screen and (min-width: 1024px){
     .hero-title{
-        font-size: 6em !important;
+        font-size: 4.5em !important;
     }
     .hero-subtitle{
         font-size: 1.7em;
@@ -84,13 +95,30 @@ a{
     
 }
 
-/* Extra large screens */
-@media screen and (min-width: 1500px){
+/* XXL screens */
+@media screen and (min-width: 1400px){
+    .hero-title{
+        font-size: 5.5em !important;
+    }
     .hero-subtitle{
-        font-size: 2em;
+        font-size: 1.9em;
     }
     .icons{
         font-size: 2.5em;
+    }
+    
+}
+
+/* Greater than XXL screens */
+@media screen and (min-width: 2000px){
+    .hero-title{
+        font-size: 12em !important;
+    }
+    .hero-subtitle{
+        font-size: 4em;
+    }
+    .icons{
+        font-size: 5em;
     }
     
 }
