--- a/src/style/Books.css
+++ b/src/style/Books.css
@@ -5,7 +5,7 @@
     
 }
 
-.best-selling{
+.best-selling-container{
     background-color: #483F48;
     display: flex;
 }
@@ -15,23 +15,46 @@
     height: auto;
 }
 
-.rating{
+.rating-stars{
     color: #FFB600;
 }
 
 
 /* write a rule for all buttons from the app since same layout (App.css) */
-.rating-button{
-    background-color: #7B1F27;
+.rating-button, .rating-button:hover, .rating-button:focus{
+    background-color: #7B1F27 !important;
     border: none;
 }
+
 
 .book-cover{
     width: 8em;
     height: auto;
 }
 
-.featured-books{
+.featured-books-container{
     display: flex;
 }
 
+
+/* Media Queries */
+@media screen and (min-width: 375px) and (max-width:425px){
+    .best-selling-cover-img{
+        width: 13em;
+    }
+    
+}
+
+@media screen and (min-width: 425px) and (max-width: 760px){
+    .best-selling-cover-img{
+        width: 15.5em;
+    }
+    
+}
+
+@media screen and (min-width: 768px){
+    .best-selling-cover-img{
+        width: 12em;
+    }
+    
+}
