--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,22 @@ main{
 }
 
 .section-container{
-    position: absolute;
+    /* position: absolute; */
     top: 2%;
-    left: 50%;
-    transform: translate(-50%, -0%);
+    /* left: 50%; */
+    /* transform: translate(-50%, -0%); */
     color: white;
     font-family: "Livvic", sans-serif;
 }
+
+.footer-container{
+    position: relative;
+    bottom: 0;
+    right: 0;
+    
+    
+}
+
 
 section{
     margin-bottom: 10em;
