--- a/src/style/About.css
+++ b/src/style/About.css
@@ -33,7 +33,20 @@
 
 @media screen and (min-width: 768px){
     .about-img{
-        width: 25em;
+        width: 24em;
     }
     
+}
+
+@media screen and (min-width: 1000px){
+    .about-img{
+        width: 20em;
+    }
+    
+}
+
+@media screen and (min-width: 1200px){
+    .about-img{
+        width: 25em;
+    }
 }
