--- a/src/style/Arts.css
+++ b/src/style/Arts.css
@@ -10,30 +10,37 @@
 }
 
 
-.art-cover{
-    width: 10em;
-    height: auto;
+.art-cover-container {
+    width: 15em;
+    height: 15em;
 }
+  
+.art-cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 
 /* Media Queries */
 @media screen and (min-width: 375px) and (max-width:425px){
-    .art-cover{
-        width: 13em;
-    }
-    
-}
-
-@media screen and (min-width: 425px) and (max-width: 760px){
     .art-cover{
         width: 15em;
     }
     
 }
 
+@media screen and (min-width: 425px) and (max-width: 760px){
+    .art-cover{
+        width: 18em;
+    }
+    
+}
+
 @media screen and (min-width: 768px){
     .art-cover{
-        width: 12em;
+        width: 14em;
     }
     
 }
