--- a/src/style/Arts.css
+++ b/src/style/Arts.css
@@ -10,37 +10,36 @@
 }
 
 
-.art-cover-container {
-    width: 15em;
-    height: 15em;
-}
-  
 .art-cover {
-    width: 100%;
-    height: 100%;
+    width: 12em;
+    height: 12em;
     object-fit: cover;
 }
 
 
 
 /* Media Queries */
-@media screen and (min-width: 375px) and (max-width:425px){
+@media screen and (min-width: 375px) and (max-width:424px){  
     .art-cover{
         width: 15em;
+        height: 15em;
     }
     
 }
 
-@media screen and (min-width: 425px) and (max-width: 760px){
+@media screen and (min-width: 425px){
     .art-cover{
         width: 18em;
+        height: 18em;
     }
     
 }
 
-@media screen and (min-width: 768px){
+
+/* Make table layout match larger phone devices */
+@media screen and (min-width: 768px) and (max-width: 1200){
     .art-cover{
-        width: 14em;
+        width: 13em;
+        height: 13em;
     }
-    
 }
