--- a/src/style/Arts.css
+++ b/src/style/Arts.css
@@ -19,7 +19,7 @@
 
 
 /* Media Queries */
-@media screen and (min-width: 375px) and (max-width:424px){  
+@media screen and (min-width: 375px) and (max-width:424px){  /* Medium phones */
     .art-cover{
         width: 15em;
         height: 15em;
@@ -27,7 +27,7 @@
     
 }
 
-@media screen and (min-width: 425px){
+@media screen and (min-width: 425px) and (max-width: 767px){  /* Large phones */
     .art-cover{
         width: 18em;
         height: 18em;
@@ -35,11 +35,17 @@
     
 }
 
-
-/* Make table layout match larger phone devices */
-@media screen and (min-width: 768px) and (max-width: 1200){
+@media screen and (min-width: 768px) and (max-width: 1300px){  /* Tablets */
     .art-cover{
-        width: 13em;
-        height: 13em;
+        width: 14em;
+        height: 14em;
     }
+}
+
+@media screen and (min-width: 1300px){  /* Bigger screens */
+    .art-cover{
+        width: 18em;
+        height: 18em;
+    }
+    
 }
