--- a/src/style/NavigationBar.css
+++ b/src/style/NavigationBar.css
@@ -2,6 +2,7 @@
 
 .navbar{
     background-color: #000000;
+    color: #ffffff;
 }
 
 .navbar-brand img {
@@ -9,21 +10,20 @@
     height: auto;
 }
 
-.navigation-bar .nav-link{
-    color: #ffffff;
+.navbar .nav-link{
     font-weight: 600;
     margin-left: 1.5em;
 }
 
-.navbar-toggler{
+.navbar .navbar-toggler{
     border: none;
     padding: 0;
 }
 
-.navbar-toggler:focus{
+.navbar .navbar-toggler:focus{
     box-shadow: none;
 }
 
-.navbar-toggler-icon {
+.navbar .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='1.2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
