--- a/src/style/NavigationBar.css
+++ b/src/style/NavigationBar.css
@@ -24,6 +24,17 @@
     box-shadow: none;
 }
 
-.navbar .navbar-toggler-icon {
+/* .navbar .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='1.2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+} */
+
+/* Default icon styling */
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23B0B0B0' stroke-linecap='round' stroke-miterlimit='10' stroke-width='1.2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
+/* Open icon styling */
+.navbar-toggler-icon.open {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30' fill='%23B0B0B0'%3e%3cpath stroke='none' stroke-linecap='round' stroke-miterlimit='10' stroke-width='1.5' d='M4.707 4.293a1 1 0 0 1 1.414 0L15 12.586l8.293-8.293a1 1 0 0 1 1.414 1.414L16.414 14l8.293 8.293a1 1 0 0 1-1.414 1.414L15 15.414l-8.293 8.293a1 1 0 0 1-1.414-1.414L13.586 14 4.707 5.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+}
+
