--- a/src/style/ScrollToTop.css
+++ b/src/style/ScrollToTop.css
@@ -1,13 +1,41 @@
+.scrollToTopBtn.hide{
+    display: none !important;
+}
+
 .scrollToTopBtn.show{
     display: block;
-    background-color: black !important;
+    width: 2.5em;
+    height: 2.5em;
+    background-color: rgba(255, 255, 255, 0.788) !important;
+    color: black !important;
     bottom: 50px;
     left: 80vw;
     position: fixed;
     z-index: 1;
 }
 
-
-.scrollToTopBtn.hide{
-    display: none !important;
+.scrollToTopBtn.show > .scrollToTopIcon{
+    font-size: 1.3em;
+    
 }
+
+
+@media screen and (min-width: 768px) {
+    .scrollToTopBtn.show{
+        left: 85vw;
+        width: 3.2em;
+        height: 3.2em;
+    }
+
+    .scrollToTopBtn.show > .scrollToTopIcon{
+        font-size: 1.7em;
+        
+    }
+    
+}
+
+
+
+
+
+
